--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
-pynotifyd (0.5-2) UNRELEASED; urgency=low
+pynotifyd (0.5-4) stable; urgency=low
 
+  [ Helmut Grohne ]
   * Missing (empty) ${misc:Depends} added for debhelper.
   * Support changing of uid and gid of daemon.
+  * providers.jabber: fix file descriptor leak
 
- -- Helmut Grohne <h.grohne@cygnusnetworks.de>  Thu, 24 Feb 2011 15:22:23 +0100
+  [ Torge Szczepanek ]
+  * Version bump
+
+ -- Torge Szczepanek <info@cygnusnetworks.de>  Fri, 13 Jan 2012 17:15:54 +0100
 
 pynotifyd (0.5-1) stable; urgency=low
 
