--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pynotifyd (0.8.4) stable; urgency=low
+
+  * More logging in persistentjabber.
+  * Improve documentation.
+  * Attempt to fix more reconnect issues in persistentjabber.
+
+ -- Helmut Grohne <h.grohne@cygnusnetworks.de>  Tue, 29 Jan 2013 11:29:04 +0100
+
 pynotifyd (0.8.3) stable; urgency=low
 
   * Attempt to fix
