--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pynotifyd (0.8.5) stable; urgency=low
+
+  * Bump version to 0.8.5.
+  * jabber: Add "chat" to default includestates.
+  * Make restart in init script more reliable.
+
+ -- Helmut Grohne <h.grohne@cygnusnetworks.de>  Tue, 09 Apr 2013 17:13:14 +0200
+
 pynotifyd (0.8.4) stable; urgency=low
 
   * More logging in persistentjabber.
