--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pynotifyd (0.8.9) UNRELEASED; urgency=low
+
+  * TODO.
+
+ -- Helmut Grohne <h.grohne@cygnusnetworks.de>  Tue, 25 Jun 2013 16:00:38 +0200
+
 pynotifyd (0.8.8) stable; urgency=low
 
   * persistentjabber
